correct errors validator w3c

--- a/about-us.html
+++ b/about-us.html
@@ -39,19 +39,18 @@
 		<h2 class="subtitle-contact">Cómo contactar con nosotras</h2>
 		<p class="paragraph">Si tienes cualquier duda o sugerencia ponte en contacto con nosotras rellenando el formulario que encontrarás debajo. Cualquier información nos será útil para mejorar nuestra página y estaremos encantadas de solucionar cualquier problema que tengáis o resolver cualquier duda.</p>
 		<p class="paragraph">Muchas gracias por confiar en <span class="important"><strong>NaN!</strong></span></p>
-		<form class="contact-form" method="post" class="total-form" enctype="multipart/form-data">
+		<form class="contact-form" method="post" enctype="multipart/form-data">
 			<label class="label" for="name">Nombre*</label>
 			<input class="cell" id="name" type="text" name="name" required>
 			<label class="label" for="email">Correo electrónico*</label>
 			<input class="cell" id="email" type="email" name="email" required>
 			<label class="label" for="suggestion">Escribe aquí tu pregunta o sugerencia</label>
 			<textarea class="cell" id="suggestion" name="suggestion" rows="6" cols="40" ></textarea>
-			<input class="button" type=submit value="Enviar" class="">
+			<input class="button" type=submit value="Enviar">
 		</form>
 	</main>
 	<footer class="footer">
 		<p class="copy">Copyright &copy;NaN!</p>
-		</div>
 	</footer>
 </body>
 </html>
