Bugfixes. font styles modified

--- a/formpage.html
+++ b/formpage.html
@@ -74,7 +74,7 @@
 						<span class="btnSection btnStyles"></span>
 					</legend>
 					<div id="select-styles" class="boxfield hidden">
-						<div>
+						<div class="select-color">
 						<h2>Selecciona tus colores</h2>
 						<ul class="colors">
 							<li>
@@ -88,7 +88,7 @@
 							</li>
 						</ul>
 					</div>
-						<div>
+						<div class="select-font">
 							<h2>Selecciona tu fuente</h2>
 							<ul class="fonts">
 								<li>
