Optimize background resolution. Change background color skill. Add reset button.

--- a/formpage.html
+++ b/formpage.html
@@ -103,7 +103,7 @@
 							</ul>
 						</div>
 						<div class="input-form-buttoms">
-							<input type="button" name="delete" value="Borrar">
+							<input type="reset" name="delete" value="Borrar">
 							<input type="button" name="save" value="Guardar">
 						</div>
 					</div>
@@ -160,7 +160,7 @@
 							<textarea id="summary" name="comments" rows="6" cols="40" class="personal-fields"></textarea>
 						</div>
 						<div class="input-form-buttoms">
-							<input type="button" name="delete" value="Borrar">
+							<input type="reset" name="delete" value="Borrar">
 							<input type="button" name="save" value="Guardar" class="save-personal">
 						</div>
 					</div>
@@ -211,7 +211,7 @@
 						</div>
 						<div class="input-form-buttoms">
 							<input type="button" name="add" value="Añadir">
-							<input type="button" name="delete" value="Borrar" >
+							<input type="reset" name="delete" value="Borrar" >
 							<input type="button" name="save" value="Guardar" class="save-job">
 						</div>
 					</div>
@@ -253,7 +253,7 @@
 						</div>
 						<div class="input-form-buttoms">
 							<input type="button" name="add" value="Añadir">
-							<input type="button" name="delete" value="Borrar">
+							<input type="reset" name="delete" value="Borrar">
 							<input type="button" name="save" value="Guardar" class="save-edu">
 						</div>
 					</div>
@@ -269,12 +269,12 @@
 						<div class="input-form skills">
 							<label for="skillstext">Habilidad</label>
 							<input id="skillstext" type="text" name="skillstext" class="skillstext">
-							<label for="percentage">Porcentanje</label>
+							<label for="percentage">Porcentaje</label>
 							<input id="percentage" type="text" name="porcentaje">
 						</div>
 						<div class="input-form-buttoms">
 							<input id="plus" type="button" name="add" value="Añadir">
-							<input type="button" name="delete" value="Borrar">
+							<input type="reset" name="delete" value="Borrar">
 							<input id="save-skills" type="button" name="save" value="Guardar">
 						</div>
 					</div>
@@ -290,12 +290,10 @@
 							<label for="details">Datos de interés</label>
 							<input id="details" type="text" name="details" class="details">
 						</div>
-						<div class="input-form-rellenar">
-							<input type="button" value="rellenar">
-						</div>
+
 						<div class="input-form-buttoms">
 							<input type="button" name="add" value="Añadir">
-							<input type="button" name="delete" value="Borrar">
+							<input type="reset" name="delete" value="Borrar">
 							<input type="button" name="save" value="Guardar">
 						</div>
 					</div>
