--- a/formpage.html
+++ b/formpage.html
@@ -20,7 +20,7 @@
 		<nav>
 			<ul class="menu">
 				<li>
-					<img class="compartir" src="images/compartir2.png" alt="compartir">
+					<a href="http://www.twitter.com/share?url=https://adalab.github.io/clarke-s2-nan"/><img class="compartir" src="images/compartir2.png" alt="compartir"></a>
 				</li>
 
 				<li>
