--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles/reset.css">
 	<link rel="stylesheet" href="styles/style.css">
-	<link rel="stylesheet" href="styles/cabecera.css">
+	<link rel="stylesheet" href="styles/header-footer.css">
 	<link rel="stylesheet" href="styles/contact.css">
 	<title>Crea tu CV- Sobre Nosotras</title>
 </head>
