--- a/formpage.html
+++ b/formpage.html
@@ -252,7 +252,7 @@
 							<textarea id="education-extract" name="education-extract" rows="6" cols="40" class="edu-fields"></textarea>
 						</div>
 						<div class="input-form-buttoms">
-							<input type="button" name="add" value="Añadir">
+							<input type="button" name="add" value="Añadir" class="add-edu">
 							<input type="reset" name="delete" value="Borrar">
 							<input type="button" name="save" value="Guardar" class="save-edu">
 						</div>
