añadir campos trabajo

--- a/formpage.html
+++ b/formpage.html
@@ -210,9 +210,9 @@
 							<textarea id="job-extract" name="job-extract" rows="6" cols="40" class="job-fields"></textarea>
 						</div>
 						<div class="input-form-buttoms">
-							<input type="button" name="add" value="Añadir">
 							<input type="reset" name="delete" value="Borrar" >
-							<input type="button" name="save" value="Guardar" class="save-job">
+							<input type="button" name="add" class="add-job"value="Añadir">
+							<!-- <input type="button" name="save" value="Guardar" class="save-job"> -->
 						</div>
 					</div>
 				</fieldset>
@@ -347,17 +347,16 @@
 					<section class="prev-professionalexperience">
 						<h2 class="prev-titles">Formación profesional</h2><hr>
 						<ul class="prev-jobdetails">
-							<li class="prev-jobdetails-job">Puesto de trabajo: <span id="trabajo" class="prev-job"></span></li>
+							<!-- <li class="prev-jobdetails-job">Puesto de trabajo: <span id="trabajo" class="prev-job"></span></li>
 							<li class="prev-jobdetails-charge">Cargo: <span id="cargo" class="prev-job"></span></li>
-							<li id="jobdetails-company" class="prev-jobdetails-company">Empresa: <span id="empresa" class="prev-job"></span>
-							</li>
+							<li id="jobdetails-company" class="prev-jobdetails-company">Empresa: <span id="empresa" class="prev-job"></span></li>
 							<li class="prev-jobdetails-date">
 								<ul class="prev-jobdate">
 									<li id="jobdate-start" class="prev-jobdate-start">Fecha de inicio: <span id="inicio-mes" class="prev-job"></span>/<span id="inicio-año" class="prev-job"></span class="prev-job"></li>
 									<li id="jobdate-end" class="prev-jobdate-end">Fecha de final: <span id="fin-mes" class="prev-job"></span>/<span id="fin-año" class="prev-job"></span></li>
 								</ul>
 							</li>
-							<li class="prev-jobdetails-description">Descripción del cargo: <span id="descripcion-trabajo" class="prev-job"></span></li>
+							<li class="prev-jobdetails-description">Descripción del cargo: <span id="descripcion-trabajo" class="prev-job"></span></li> -->
 						</ul>
 					</section>
 				</section>
