--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles/reset.css">
-	<link rel="stylesheet" href="styles/cabecera.css">
+	<link rel="stylesheet" href="styles/header-footer.css">
 	<link rel="stylesheet" href="styles/style.css">
 
 	<title>Crea tu CV</title>
