--- a/formpage.html
+++ b/formpage.html
@@ -239,12 +239,12 @@
 						<div class="input-form date">
 							<div class="input-form initialyear">
 								<label for="education-year-start">Año de inicio</label>
-								<select id="education-year-start" name="education-year-start" class="years edu-fields">
+								<select id="education-year-start" name="education-year-start" class="years edu-fields-start">
 								</select>
 							</div>
 							<div class="input-form finalyear">
 								<label for="education-year-end">Año de finalización</label>
-								<select id="education-year-end" name="education-year-end" class="years edu-fields"></select>
+								<select id="education-year-end" name="education-year-end" class="years edu-fields-end"></select>
 							</div>
 						</div>
 						<div class="input-form">
